Fix repeated imports of the same bundle resource

Half of this fix is to make sure all import paths copy bundles to the
root data folder.

The other half is to ensure tags and resource-tags relationships are
completely purged when the backing bundle is gone.

BUG: 445336
(cherry picked from commit 4d70fed5adcf1fbdf657e278a70e12e1ec1db0b6)